Fix spacing of tab title and ID

--- a/src/components/semantic/tabs.module.css
+++ b/src/components/semantic/tabs.module.css
@@ -76,7 +76,6 @@
 
 .meta {
     padding: 0 1em;
-    margin-top: -1em;
 }
 
 .main > div {
